# System-One-and-Two

./: .gitignore  CMakeLists.txt  README.md  dependencies.sh  main.py
andrea/: CMakeLists.txt  README.md  dependencies.sh  setup.py
andrea/bindings/python/: tensor_bindings.cpp
andrea/include/: common.hpp
andrea/include/andrea/: hello_world.h  tensor.hpp  tensor_ops.hpp
andrea/include/andrea/ops/: cpu_ops.hpp
andrea/python/andrea/: __init__.py
andrea/python/src/: bindings.cpp
andrea/src/: tensor.cpp  tensor_ops.cpp
andrea/tensor/: a.out  tensor.hpp  tests  tests.cpp
andrea/tests/cpp/: test_tensor.cpp
andrea/tests/python/: hello_world.py  tensor_test.py
archive/: CMakeLists.txt  README.md  cuda_ops.hpp  hello_world.cpp  tensor_ops.cpp  tensor_ops.hpp
archive/ops/: cpu_ops.hpp
archive/ops/ops/: cpu_ops.cpp  cuda_ops.cu
archive/tensor/: tensor.cpp  tensor.h
docs/stages/: README.md
papers/: links.md
research/: log.md  notes.md
src/: test.ipynb
src/trash/: hello_cuda  hello_cuda.cu
tensor/: cpu.cpp  cuda.cu  cuda.h
